app/tools/uptimekuma/uptimekuma-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptimekuma
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uptimekuma
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: uptimekuma
    spec:
      securityContext:
        fsGroup: 0
        runAsUser: 0
      containers:
        - image: louislam/uptime-kuma:1.11.4
          name: uptimekuma
          imagePullPolicy: Always
          resources:
            limits: # you restrict the maximum amount of memory available to the pods
              memory: "1024M"
              cpu: "500m"
            requests: # allow you to allocate a guaranteed minimum of computing resources for the pods r
              memory: "256M"
              cpu: "250m"
          volumeMounts:
            - mountPath: /app/data
              name: config
      restartPolicy: Always
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: uptimekuma
status: {}
