app/tools/uptimekuma/uptimekuma-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: uptimekuma
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3001
  selector:
    app: uptimekuma
  type: LoadBalancer
  # if type: LoadBalancer is enabled than comment out INGRESS section below
status:
  loadBalancer: {}
