app/tools/uptimekuma/uptimekuma-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: uptimekuma
  namespace: tools
spec:
  ingressClassName: traefik
  rules:
  - host: uptimekuma.home.adaminformatika.hu
    http:
      paths:
      - backend:
          service:
            name: uptimekuma
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - uptimekuma.home.adaminformatika.hu
    secretName: uptimekuma.home.adaminformatika.hu
